[package]
name = "dungeon_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137",features = ["derive"]}
serde_json = "1.0.81"

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

rand="0.8.5"

num = "0.4.0"